Selectively revert "simplify stream toList"
This partly reverts commit feca590de238bdc4c58d5f95ca9339b7e64b7495.