@@ -53,6 +53,7 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -101,7 +102,7 @@ public class ErrataListConfirmAction extends RhnAction implements
         User user = context.getCurrentUser();
         return SystemManager.inSet(user, SetLabels.SYSTEM_LIST).stream()
                 .map(SystemOverview::getId)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private ActionForward handleDispatch(
