@@ -21,6 +21,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -201,7 +202,7 @@ public class ChannelsJson {
         this.children = childrenIn.map(
                 (c) -> new ChannelJson(c.getId(), c.getLabel(), c.getName(), c.isCustom(), true,
                         c.isCloned(), c.getChannelArch().getLabel()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -222,7 +223,7 @@ public class ChannelsJson {
                     null
             );
             return channelWithArch;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     /**
